# foundational-workflows

./: BYOA guide.md  README.md
ML-workflow/: README.md  README_FULL.md
ML-workflow/code/: .env.local  .env.pcai  .gitignore  download_medmnist.py  infer.py  model.py  pick_best.py  requirements.txt  train_multi_gpu.py  upload_model_to_s3_bucket.py  utils.py
agentic/: .gitignore  .sample_env  README.md  create_env.py  sample_config.yaml
agentic/controller/: Dockerfile  model-key-controller-1.0.0.tgz  model-key-controller.py
agentic/controller/helm/: Chart.yaml  values.yaml
agentic/examples/crewai/: README.md  flightdata.txt  multi-tool-agent.py  pyproject.toml  requirements.txt
agentic/examples/langgraph/: multi-tool-agent.py  pyproject.toml  requirements.txt
agentic/examples/langgraph-pydantic/: multi-tool-agent.py  pyproject.toml  requirements.txt
agentic/guardrails/: README.md  deploy_models_and_guardrails.sh
agentic/mcp-servers/ezpresto-server/: mcp-ezpresto-1.0.0.tgz  mcp-ezpresto-server-1.0.0.tgz
agentic/mcp-servers/filesystem-server/: Dockerfile  filesystem_server.py  mcp-fs-server-1.0.0.tgz  requirements.txt
agentic/mcp-servers/mcp-inspector/: mcp-inspector-1.0.0.tgz  values.yaml
agentic/mcp-servers/s3-server/: Dockerfile  mcp-s3-server-1.0.0.tgz  requirements.txt  s3_server.py
agentic/tools/controller/: model-key-controller-1.0.0.tgz  (+1 more)
multinode-model-serving/: README.md
multinode-model-serving/examples/: llama-70b-lws-sglang-2rdma-4tp-2pp-pvc.yaml  llama-70b-lws-vllm-2rdma-4tp-2pp-pvc.yaml  model-downloder-job.yaml
(+70 files in other folders)
