[project]
name = "langgraph-pydantic-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=4.0.0",
    "fastmcp>=2.14.4",
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "openinference-instrumentation-langchain>=0.1.58",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
